# eugl

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py
configs/: example.cfg
eugl/: _version.py  acquisition_info.py  contiguity.py  fmask.py  metadata.py  mndwi.py  s2cl.py  s2cloudless.py  test_fmask.py  version.py
eugl/gqa/: S2_ocean_tile.csv  __init__.py  geometric_utils.py  ocean_list.csv  tasks.py
testing/: README.md  cmp-fmask-outputs.py  fmask-generate-test-data.py
