[project]
# Support Python 3.6+
requires-python = ">=3.6"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.ruff]
line-length = 90
# Which checkers to enable?
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "N", # pep8-naming
]

[tool.black]
line-length = 90
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.setuptools_scm]
write_to = "eugl/version.py"
version_scheme = "post-release"
